# SDDProject

./: data.txt  journal.txt  main.py  pyproject.toml  requirements.txt
application/: APIRoutes.py  PageRoutes.py  models.py  program.py  routes.py  util.py
application/migrations/versions/: e61c3ed117f4_allowed_changing_courses_public_status.py
application/static/highlight/: tomorrow.css
application/static/juniper/: juniper.min.js
application/static/styles/: courseStyle.css  customCodeMirrorTheme.css  mainStyle.css
application/styles/: courseStyle.css
application/templates/: base.html  blocked.html  course.html  editCourse.html  editProblems.html  index.html  login.html  register.html  users.html  viewCourses.html
