[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["jiak1 <jackdonaldson005@gmail.com>"]
description = ""
name = "sddproject"
version = "0.1.0"
[tool.poetry.dependencies]
PyMySQL = "^0.9.3"
alembic = "^1.4"
flask = "^1.1"
flask-login = "^0.5.0"
flask-migrate = "^2.5"
flask-sqlalchemy = "^2.4"
python = "^3.8"
sqlalchemy = "^1.3"
werkzeug = "^1.0"
[tool.poetry.dev-dependencies]
